- updates relative URLs for imgs

--- a/_posts/2025-12-28-v2-0-0.md
+++ b/_posts/2025-12-28-v2-0-0.md
@@ -33,7 +33,7 @@ changelog_groups:
 
 This release makes My Parent Record feel faster, clearer, and more reliable during the moments you need it most—handoffs, schedule changes, and quick documentation.
 
-<img src="/assets/images/releases/v2-0-0/sidebar.png" alt="Sidebar" class="w-full rounded-lg border border-white/10 shadow-lg">
+<img src="{{ '/assets/images/releases/v2-0-0/sidebar.png' | relative_url }}" alt="Sidebar" class="w-full rounded-lg border border-white/10 shadow-lg">
 
 ## Summary
 
@@ -51,7 +51,7 @@ This is My Parent Record v2. It is designed for the Silent Guardian who is ready
 
 ## Removing the Friction
 
-<img src="/assets/images/releases/v2-0-0/sidebar-menu.png" alt="Sidebar Menu" class="w-full rounded-lg border border-white/10 shadow-lg">
+<img src="{{ '/assets/images/releases/v2-0-0/sidebar-menu.png' | relative_url }}" alt="Sidebar Menu" class="w-full rounded-lg border border-white/10 shadow-lg">
 
 We heard you. We know that in the past, technical glitches and loading times added unnecessary friction to your day. We took that feedback seriously.
 
@@ -63,7 +63,7 @@ Here is how v2.0 turns chaos into order faster than ever before:
 
 ### 1. The Speed of Truth (Sidebar & Logging)
 
-<img src="/assets/images/releases/v2-0-0/sync-progression.png" alt="Sync Progression" class="w-full rounded-lg border border-white/10 shadow-lg">
+<img src="{{ '/assets/images/releases/v2-0-0/sync-progression.png' | relative_url }}" alt="Sync Progression" class="w-full rounded-lg border border-white/10 shadow-lg">
 
 You aren't logging for fun; you are logging for protection. We’ve optimized the engine to respect your reality.
 
@@ -77,7 +77,7 @@ You aren't logging for fun; you are logging for protection. We’ve optimized th
 
 Complex custody math is exhausting. We replaced the confusing number patterns with a visual interface that makes sense.
 
-<img src="/assets/images/releases/v2-0-0/custom-pattern-generator.png" alt="Custom Pattern Generator" class="w-full rounded-lg border border-white/10 shadow-lg">
+<img src="{{ '/assets/images/releases/v2-0-0/custom-pattern-generator.png' | relative_url }}" alt="Custom Pattern Generator" class="w-full rounded-lg border border-white/10 shadow-lg">
 
 **Visual Pattern Generator:** Build complex, multi-week schedules with a few clicks. See your schedule visualize in real-time before you save it.
 
@@ -85,7 +85,7 @@ Complex custody math is exhausting. We replaced the confusing number patterns wi
 
 ### 3. The Peace of Proof (Reporting)
 
-<img src="/assets/images/releases/v2-0-0/summary-report.png" alt="Summary Report" class="w-full rounded-lg border border-white/10 shadow-lg">
+<img src="{{ '/assets/images/releases/v2-0-0/summary-report.png' | relative_url }}" alt="Summary Report" class="w-full rounded-lg border border-white/10 shadow-lg">
 
 Your lawyer doesn't want screenshots; they want data.
 
