--- a/_posts/2026-01-11-v2-0-1.md
+++ b/_posts/2026-01-11-v2-0-1.md
@@ -17,4 +17,4 @@ changelog_groups:
 
 We noticed that adding new names in the Settings menu wasn't as intuitive as it could be. In v2.0.1, we added explicit **"Add" buttons** next to the Child and Person fields, removing the guesswork of needing to press "Enter." We also polished the visual feedback to ensure buttons clearly show when they are ready to be clicked.
 
-<img src="/assets/images/releases/v2-0-1/entity-add-buttons.png" alt="Entity Add Buttons" class="w-full rounded-lg border border-white/10 shadow-lg">
+<img src="{{ '/assets/images/releases/v2-0-1/entity-add-buttons.png' | relative_url }}" alt="Entity Add Buttons" class="w-full rounded-lg border border-white/10 shadow-lg">
