--- a/_posts/2026-01-11-v2-1-0.md
+++ b/_posts/2026-01-11-v2-1-0.md
@@ -75,7 +75,7 @@ The Request:
 
 > Make the Google permissions less scary.
 
-<img src="/assets/images/releases/v2-1-0/google-permissions.png" alt="Google Permissions" class="w-full rounded-lg border border-white/10 shadow-lg">
+<img src="{{ '/assets/images/releases/v2-1-0/google-permissions.png' | relative_url }}" alt="Google Permissions" class="w-full rounded-lg border border-white/10 shadow-lg">
 
 **The Result:** The app no longer asks for full access to your entire Google Drive. It now only asks for permission to manage the specific "My Parent Record" files and folders. This ensures your private digital life stays private.
 
@@ -85,7 +85,7 @@ The Request:
 
 > I spend money on my kids that I don't expect my ex to pay back, but I still need to prove to the court how much it costs to raise them.
 
-<img src="/assets/images/releases/v2-1-0/personal-expenses.png" alt="Personal Expenses" class="w-full rounded-lg border border-white/10 shadow-lg">
+<img src="{{ '/assets/images/releases/v2-1-0/personal-expenses.png' | relative_url }}" alt="Personal Expenses" class="w-full rounded-lg border border-white/10 shadow-lg">
 
 **The Feature:** You can now log these as "Personal Expenses." This allows you to track the total cost of raising your child for your own records, without erroneously telling the app that your co-parent owes you money for them.
 
@@ -97,7 +97,7 @@ The Request:
 
 > My custody schedule changes in the summer. I need a calendar that shows 'Week On/Off' for June, but keeps my normal schedule for September.
 
-<img src="/assets/images/releases/v2-1-0/segmented-calendar.png" alt="Segmented Calendar" class="w-full rounded-lg border border-white/10 shadow-lg" />
+<img src="{{ '/assets/images/releases/v2-1-0/segmented-calendar.png' | relative_url }}" alt="Segmented Calendar" class="w-full rounded-lg border border-white/10 shadow-lg" />
 
 **The Feature:** The Schedule Generator now supports Date Ranges. You can tell it to generate a schedule just for June 1st to August 31st, without wiping out the schedule you already built for the fall. You can also retroactively fix mistakes in the past without breaking the future.
 
