- updates to images, copy, and templates for launch

--- a/_posts/2026-01-11-v2-1-0.md
+++ b/_posts/2026-01-11-v2-1-0.md
@@ -33,6 +33,7 @@ changelog_groups:
       - "**Better Dropdowns:** Upgraded all menu dropdowns to a new friendly interface that works better."
       - "**Sync Visibility:** Renamed the sync icon to a clear Sync Data button so you always know how to update your Summary Report and Dashboard."
       - "**Menu Clarity:** Renamed License to License & Updates to make updates easier to find."
+      - "**Smart Dropdowns:** Updated all dropdown menus to be aware of the screen edges. If you open a menu near the bottom of the screen, it will now intelligently flip upwards instead of getting cut off, ensuring you can always see all your options without extra scrolling."
 
   - name: "Bug Fixes"
     items:
@@ -43,6 +44,7 @@ changelog_groups:
       - "**Audit Log Permissions:** Fixed a bug where generating an Audit Log would fail with a Permissions Not Sufficient error. The app now correctly requests the necessary access to create Google Docs, so you can successfully generate and save your Audit Logs again."
       - "**Stability Automation:** We added automated checks to our development process to catch these kinds of permission issues before they reach you in the future."
       - '**Import Error:** Resolved an issue where importing small files (under 2MB) would fail with a "is not a function" error. This was caused by a missing connection between the app''s sidebar and the backend import function. The missing link has been restored, and direct file imports now function correctly.'
+      - '**Version Display:** Fixed a persistent issue where new copies of the workbook would incorrectly display "Version 1.0.0" in the Admin panel. The application now reads its version directly from the software configuration, ensuring that your system always reports the correct release number to the registry and support team.'
 ---
 
 We understand that when you use this app, you are trusting us with the most sensitive parts of your life—your children’s schedule and your financial history. You need a tool that is not only powerful and private but also responsive to the real-world challenges you face every day.
@@ -78,6 +80,24 @@ The Request:
 <img src="{{ '/assets/images/releases/v2-1-0/google-permissions.png' | relative_url }}" alt="Google Permissions" class="w-full rounded-lg border border-white/10 shadow-lg">
 
 **The Result:** The app no longer asks for full access to your entire Google Drive. It now only asks for permission to manage the specific "My Parent Record" files and folders. This ensures your private digital life stays private.
+
+**"See, edit, create, and delete only the specific Google Drive files you use with this app":**
+We strictly limit the app so it can only touch files it created itself. It needs this to generate your PDF reports and save backups. It cannot see your personal photos or other documents.
+
+**"View and manage spreadsheets":**
+The app lives inside a spreadsheet. It needs permission to write down the events, expenses, and schedules you type into the sidebar.
+
+**"Connect to an external service":**
+This allows the app to securely check your license key and ensure it is active.
+
+**"Send email as you":**
+This is used only when you click the "Contact Support" button in the sidebar. It allows the app to send a support email on your behalf. We never send emails without you clicking that button.
+
+**"Run when you are not present":**
+This allows the app to perform nightly housekeeping while you sleep—like updating your dashboard so your "Last 30 Days" view is accurate when you wake up.
+
+**"Display third-party web content":**
+This is simply the technology that powers the visual menu and buttons (the sidebar) on the right side of your screen.
 
 ### 2. "Personal Expense" Tracking (User Requested!)
 
