chore: updates title for 2.2.1 release

--- a/_posts/2026-01-25-v2-2-1.md
+++ b/_posts/2026-01-25-v2-2-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Personal Expenses, Flexible Schedules, and Enhanced Privacy"
+title: "See All Your Events Without Fuss"
 date: 2026-01-25
 category: Feature
 # Announcement, Feature, Improvement, Bug Fix, Security, Engineering
