chore: updates features titles in 2.3.1

--- a/_posts/2026-01-30-v2-3-1.md
+++ b/_posts/2026-01-30-v2-3-1.md
@@ -38,7 +38,7 @@ We’ve been listening closely to your feedback, and this update is all about ma
 
 ## The Improvements
 
-### 1. Plan Further with 8-Week Rhythms
+### 1. Plan Further with 8-Week Rhythms (User Requested!)
 
 The Request:
 
@@ -50,7 +50,7 @@ Managing summer camp splits or every-other-month rotations shouldn't feel like a
 
 ---
 
-### 2. Multi-Child Logging: Save Once, Sync Everywhere
+### 2. Multi-Child Logging: Save Once, Sync Everywhere (User Requested!)
 
 The Request:
 
@@ -62,7 +62,7 @@ If all the kids were at the same doctor’s visit, you shouldn't have to type it
 
 ---
 
-### 3. Clean Up Records with One-Click Delete
+### 3. Clean Up Records with One-Click Delete (User Requested!)
 
 The Request:
 
@@ -74,7 +74,7 @@ We’ve simplified how you manage your history. You can now fully remove an even
 
 ---
 
-### 4. The "Escape Hatch" Emergency Backup
+### 4. The "Escape Hatch" Emergency Backup (User Requested!)
 
 The Request:
 
