hotfix: added 2.4.2 for fixing workbook versioning bug

--- a/_posts/2026-02-11-v2-4-1.md
+++ b/_posts/2026-02-11-v2-4-1.md
@@ -9,7 +9,7 @@ category: Bug Fix
 version: "2.4.1"
 release_type: hotfix
 changelog_groups:
-  - name: "Import Performance"
+  - name: ""
     items:
       - '**Import:** Increased timeout from 2 to 5 minutes for import processes to prevent timeouts and "Import took too long" errors when importing large datasets or when Google Servers are slow.'
 ---
