hotfix: updates changelog for 2.4.2 - adds fix for auto update after registration

--- a/_posts/2026-02-12-v2-4-2.md
+++ b/_posts/2026-02-12-v2-4-2.md
@@ -14,4 +14,5 @@ changelog_groups:
       - "**Guardian-app:** Fixed issue where workbook was incorrectly reporting its version number. Updated logic to pull workbook version explicitly from hardcoded app AppConfig."
       - "**Guardian-lib:** Updated logic to not fall back to hardcoded lib AppConfig."
       - "**Doc props:** Removed use of Workbook_Version doc props."
+      - '**Updates check:** Fixed issue where "Last checked" was updated after successful license activation, but the check was not performed.'
 ---
